# aura-sde-interview-agent

./: .dockerignore  .env.example  .gitignore  Aura_Design_Doc.md  Dockerfile  OPERATION_MANAGE.md  README.md  SUBMISSION_DRAFT.md  TODO.md  cloudbuild.yaml  docker-compose.yml  implementation_plan.md  pyproject.toml
bot/: agent.py  bot.py  sessions.py
bot/audio/: rnnoise.py  silero_vad.py  smart_turn.py
bot/pipelines/: voice.py
bot/processors/: session_timer.py
bot/prompts/: grading_rubric.md  prompt_greeting_anon.md  prompt_greeting_named.md  prompt_round_behavioural.md  prompt_round_coding.md  prompt_round_coding_1.md  prompt_round_coding_2.md  prompt_round_debugging.md  prompt_round_googliness.md  prompt_round_system_design.md  prompt_round_targeted_debrief.md  system_prompt.md  system_prompt_anon.md  system_prompt_named_fast.md
deploy/caddy/: Caddyfile.example
docs/: Aura_Design_Doc.md  OPERATION_MANAGE.md  SUBMISSION_DRAFT.md  gcp-deployment-proof.cast
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/public/: demo.html
frontend/src/: App.test.tsx  App.tsx  demoHtml.test.ts  index.css  main.test.tsx  main.tsx
infra/: create_reasoning_engine.py  deploy.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: test_agent.py  test_bot.py  test_session_timer.py  test_silero_vad.py  test_voice_helpers.py
