[project]
name = "aura-voice-agent"
version = "0.1.0"
description = "Aura Voice AI Agent — Solution 4: Google ADK + Gemini Live native audio + LiveKit"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=0.3.0",
    "google-genai>=1.9.0",
    "google-auth>=2.0.0",
    "livekit>=0.19.0",
    "livekit-api>=1.0.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "loguru>=0.7.0",
    "onnxruntime>=1.24.4",
    "soxr>=1.0.0",
    "pyrnnoise>=0.4.3",
    "speexdsp>=0.1.1",
    "pyloudnorm>=0.2.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
include = [
    "bot/*.py",
    "bot/**/*.py",
]
omit = [
    "bot/audio/smart_turn.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false
exclude_also = [
    "^\\s*async def run\\(",
    "^\\s*async def _post_end_of_call_webhook\\(",
    "^\\s*async def _auto_grade_session\\(",
    "^\\s*async def _generate_call_summary\\(",
    "^\\s*async def _send_audio_loop\\(",
    "^\\s*async def _wait_for_audio_track\\(",
    "^\\s*async def _process_events\\(",
    "^async def run_room_bot\\(",
]
